--- a/src/styles/ProfileJumbotron.css
+++ b/src/styles/ProfileJumbotron.css
@@ -14,11 +14,13 @@
 
 .profile-img-container {
   width: 160px;
+  height: 160px;
   border-radius: 50%;
   overflow: hidden;
   border: 4px solid white;
   position: absolute;
-  top: 90px;
+  top: 115px;
+  object-fit: cover;
 }
 
 .profile-jumbotron-info {
